syntax = "proto3";
// this is it's own package to avoid name collision with median types like OnchainConfig and BuildReport
option go_package = "github.com/smartcontractkit/chainlink-common/pkg/loop/internal/pb/mercury/v1;mercuryv1pb";

package loop.internal.pb.mercury.v1;


// note: the generate.go file in this dir specifies the import path of the relative proto files
import "loop/internal/pb/relayer.proto";


// ReportCodec is a gRPC adapter for the ReportCodec interface [pkg/types/mercury/v1/ReportCodec].
service ReportCodec {
  rpc BuildReport (BuildReportRequest) returns (BuildReportReply) {}
  rpc MaxReportLength (MaxReportLengthRequest) returns (MaxReportLengthReply) {}
  rpc CurrentBlockNumFromReport (CurrentBlockNumFromReportRequest) returns (CurrentBlockNumFromReportResponse) {}
}

// ReportFields is gRPC wrapper for struct [github.com/smartcontractkit/chainlink-data-streams/mercury/v1/ReportFields].
message ReportFields {
    uint32 timestamp =1;
    BigInt benchmarkPrice = 2;
    BigInt bid = 3;
    BigInt ask = 4;
    int64 currentBlockNum = 5;
    bytes currentBlockHash = 6;
    int64 validFromBlockNum = 7;
    uint64 currentBlockTimestamp = 8;
}
  
// BuildReportRequest is gRPC adapter for [github.com/smartcontractkit/chainlink-data-streams/mercury/v1/ReportCodec.BuildReport].
message BuildReportRequest {
  ReportFields reportFields = 1;
}
  
  // BuildReportReply is gRPC adapter for the return values of [github.com/smartcontractkit/chainlink-data-streams/mercury/v1/ReportCodec.BuildReport].
message BuildReportReply {
    bytes report = 1;
}
  
// MaxReportLengthRequest is gRPC adapter for [github.com/smartcontractkit/chainlink-data-streams/mercury/v3/ReportCodec.MaxReportLength].
message MaxReportLengthRequest {
  uint64 numOracles = 1;
}
  
// MaxReportLengthReply has return arguments for [github.com/smartcontractkit/chainlink-data-streams/mercury/v3/ReportCodec.MaxReportLength].
message MaxReportLengthReply {
  uint64 maxReportLength = 1;
}

// CurrentBlockNumFromReportRequest is gRPC adapter for [github.com/smartcontractkit/chainlink-data-streams/mercury/v1/ReportCodec.CurrentBlockNumFromReport].
message CurrentBlockNumFromReportRequest {
  bytes report = 1;
}

// CurrentBlockNumFromReportResponse is gRPC adapter for [github.com/smartcontractkit/chainlink-data-streams/mercury/v1/ReportCodec.CurrentBlockNumFromReport].
message CurrentBlockNumFromReportResponse {
  int64 currentBlockNum = 1;
}
